Some more code refactoring
Signed-off-by: Gaël L'hopital <gael@lhopital.org>